src/objects/PowerLoader__Query_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>PowerLoader__Base_Master_Field_API_Name__c</fullName>
        <inlineHelpText>Field containing Ids from which distinct values will be retrieved to be used as a filter against the main query panel object</inlineHelpText>
        <label>Base Master Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Base_Object_API_Name__c</fullName>
        <inlineHelpText>API Name of Object that filters will be run against</inlineHelpText>
        <label>Base Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Default_Value_Type__c</fullName>
        <label>Default Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Static</fullName>
                </value>
                <value>
                    <fullName>JS Snippet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Display_Sequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Display_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Single Picklist</fullName>
                </value>
                <value>
                    <fullName>Multi Picklist</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__IsDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsHidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Is_Label_HTML__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Label HTML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__List_Label_Field_API_Name__c</fullName>
        <label>List Label Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__List_Source_Type__c</fullName>
        <label>List Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOQL</fullName>
                </value>
                <value>
                    <fullName>Static List</fullName>
                </value>
                <value>
                    <fullName>Field Definition</fullName>
                </value>
                <value>
                    <fullName>JS Snippet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__List_Source__c</fullName>
        <label>List Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerLoader__List_Value_Field_API_Name__c</fullName>
        <label>List Value Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Query_Panel__c</fullName>
        <label>Query Panel</label>
        <referenceTo>PowerLoader__Query_Panel__c</referenceTo>
        <relationshipLabel>Query Parameters</relationshipLabel>
        <relationshipName>Query_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Query Parameter</label>
    <nameField>
        <displayFormat>QP-{00000}</displayFormat>
        <label>Query Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PowerLoader__Display_type_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(PowerLoader__Display_Type__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>PowerLoader__Display_Type__c</errorDisplayField>
        <errorMessage>Display type is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PowerLoader__List_Source_Type_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(PowerLoader__List_Source_Type__c, &apos;&apos;) &amp;&amp; (
ispickval(PowerLoader__Display_Type__c, &apos;Radio&apos;) ||
ispickval(PowerLoader__Display_Type__c, &apos;Single Picklist&apos;) ||
ispickval(PowerLoader__Display_Type__c, &apos;Multi Picklist&apos;)
)</errorConditionFormula>
        <errorMessage>List source type is required for selected Display Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PowerLoader__List_source_required_for_SOQL</fullName>
        <active>true</active>
        <errorConditionFormula>(isblank(PowerLoader__List_Source__c) || isblank( PowerLoader__List_Value_Field_API_Name__c ) || isblank(PowerLoader__List_Label_Field_API_Name__c)) 
&amp;&amp; ispickval(PowerLoader__List_Source_Type__c, &apos;SOQL&apos;)</errorConditionFormula>
        <errorMessage>List source (SOQL select statement), label field, and value field are required for List Source Type SOQL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PowerLoader__Lookup_Object_API_Name_required</fullName>
        <active>true</active>
        <errorConditionFormula>isblank( PowerLoader__Object_API_Name__c ) &amp;&amp; ispickval(PowerLoader__Display_Type__c , &apos;Lookup&apos;)</errorConditionFormula>
        <errorDisplayField>PowerLoader__Object_API_Name__c</errorDisplayField>
        <errorMessage>Lookup Object API Name is required when Display Type is Lookup</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PowerLoader__Object_API_required_for_Field_Definition</fullName>
        <active>true</active>
        <errorConditionFormula>(
    isblank( PowerLoader__Object_API_Name__c ) ||
    isblank( PowerLoader__List_Value_Field_API_Name__c )
)
&amp;&amp; ispickval( PowerLoader__List_Source_Type__c , &apos;Field Definition&apos;)</errorConditionFormula>
        <errorMessage>Object API Name and List Value Field API Name are required for List Source Type Field Definition</errorMessage>
    </validationRules>
</CustomObject>